--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animated-scroll-to": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
