--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Build
         run: |
           npm install
-          npm run-script build
+          npm run build
         env:
           CI: ""
 
