--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "animated-scroll-to": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-lottie": "^1.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.0.0"
   }
 }
