--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Build
         run: |
-          npm install --legacy-peer-deps
+          npm install --force
           npm run-script build
         env:
           CI: ""
