--- a/v2/package.json
+++ b/v2/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "-floriansacc-github-io",
+  "name": "floriansacc-github-io",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.0",
+  "homepage": "https://floriansacc.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -22,6 +23,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
