--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "autoprefixer": "^10.4.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.1"
+    "react-icons": "^5.4.0",
+    "react-router": "^7.1.1",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
