--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://floriansacc.github.io",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
