--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.11.6",
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -37,6 +38,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.3.5",
+    "wrangler": "^4.31.0"
   }
 }
