--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.7",
     "chartjs-adapter-moment": "^1.0.1",
