--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/vite": "^4.1.12",
     "chart.js": "^4.4.7",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.11.6",
     "@eslint/js": "^9.17.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -35,8 +36,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.3.5",
